# examples

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  schemafile.sql  users.xml
ClickHouse_vs_ElasticSearch/DataAnalytics/: README.md
ClickJSONBench/: README.md  _result_snippet.json  copy_data.sh
ClickJSONBench/_files_gz/: main.sh  total_size.sh
ClickJSONBench/_files_json/: load_data.sh  main.sh  total_size.sh
ClickJSONBench/_files_lz4/: load_data.sh  main.sh
GenAI-Examples/: README.md
LearnClickHouseWithMark/: README.md
LearnClickHouseWithMark/Streamlit-chDB/: README.md  app.py  datagen.py  pyproject.toml
LearnClickHouseWithMark/Streamlit-chDB/data/: data.csv  tariffs.csv
LearnClickHouseWithMark/Streamlit-chDB/utils/: charts.py  data.py  formatting.py  queries.py
ai/: README.md
ai/mcp/slackbot/: .env.example  .gitignore  README.md  main.py  pyproject.toml
cdc-postgresql-clickhouse/: README.md  docker-compose.yml
docker-compose-recipes/: .gitignore  README.md
docs-scraper/: .gitignore  Dockerfile  README.md  requirements.txt  scrapy.cfg
ethereum/: README.md
genai-examples/: README.md
keeper-bench-suite/: .env_template  .gitignore  README.md  benchmark.py  config.yaml  run.py  utils.py
large_data_loads/: README.md
local-analytics/: README.md
observability/: README.md
postgresql-clickhouse-data-modeling/: Dockerfile  README.md  docker-compose.yaml  generate-activity.sh  init.sh  run-cdc.sh  run.sh
stock-data-demo/: .gitignore  README.md  app.js  env.example  package-lock.json  package.json
(+4514 files in other folders)
