[project]
name = "slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.56.0",
    "pydantic-ai>=0.3.5",
    "python-dotenv>=1.1.1",
    "slack-bolt>=1.23.0",
    "altair>=5.0.0",
    "vl-convert-python>=1.6.0",
    "pillow>=10.0.0",
]
